Fix text overflow in quote section

--- a/style.css
+++ b/style.css
@@ -94,12 +94,10 @@ body {
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
-    height: 300px;
-    flex-shrink: 0;
-    justify-content: center;
     
-    padding-left: 100px;
-    padding-right: 100px;
+    justify-content: center;
+    padding: 15px 100px 15px 100px;
+
 }
 
 .quote{
@@ -107,6 +105,7 @@ body {
     text-align: center;
     font-size: 36px;
     height: auto;
+    
 }
 
 .author{
@@ -125,7 +124,7 @@ body {
     margin: 50px 80px 50px 80px;
     border-radius: 10px;
     color: #F9FAF8;
-    padding: 30px 80px 30px 80px; 
+    padding: 30px 80px 30px 80px;
 }
 
 
